[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/bg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]

[node name="MainGame" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 2 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64

[node name="DestroyPieces" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollapseGrid" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DestroyPieces" to="Grid" method="_on_DestroyPieces_timeout"]
[connection signal="timeout" from="CollapseGrid" to="Grid" method="_on_CollapseGrid_timeout"]
